--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             align-items: center;
             color: #fff;
             flex-direction: column;
+            overflow: hidden;
         }
         .container {
             text-align: center;
@@ -25,6 +26,9 @@
             box-shadow: 0 8px 32px rgba(0, 0, 0, 0.2);
             backdrop-filter: blur(10px);
             -webkit-backdrop-filter: blur(10px);
+            opacity: 0;
+            transform: translateY(50px);
+            animation: fadeInUp 1.5s ease-out forwards;
         }
         h1 {
             font-size: 36px;
@@ -41,6 +45,9 @@
             outline: none;
             font-size: 16px;
             text-align: center;
+            opacity: 0;
+            animation: fadeInUp 2s ease-out forwards;
+            animation-delay: 0.5s;
         }
         .btn {
             background: linear-gradient(135deg, #ff416c, #ff4b2b);
@@ -55,6 +62,9 @@
             transition: all 0.3s ease;
             display: inline-block;
             margin-top: 20px;
+            opacity: 0;
+            animation: fadeInUp 2.5s ease-out forwards;
+            animation-delay: 1s;
         }
         .btn:hover {
             background: linear-gradient(135deg, #ff4b2b, #ff416c);
@@ -72,6 +82,9 @@
             font-size: 18px;
             font-weight: bold;
             transition: transform 0.3s;
+            opacity: 0;
+            animation: fadeInUp 3s ease-out forwards;
+            animation-delay: 1.5s;
         }
         .wa-link img {
             margin-right: 10px;
@@ -79,6 +92,17 @@
         }
         .wa-link:hover {
             transform: scale(1.1);
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(50px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
     </style>
 </head>
