--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 <script>
     function checkCode() {
         const code = document.getElementById('loginCode').value;
-        if (code === 's6n°¥Hu905B-#dXjD#-8/@') {
+        if (code === 'darelhostingnih') {
             alert('Login berhasil!');
             document.getElementById('loginButton').style.display = 'none'; // Sembunyikan tombol Login
             document.getElementById('panelButton').style.display = 'inline-block'; // Tampilkan tombol Go to Panel
