--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     <input type="password" id="loginCode" placeholder="Enter code">
     <br>
     <button id="loginButton" onclick="checkCode()" class="btn">Login</button>
-    <a id="panelButton" href="https://new.darell.my.id" target="_blank" class="btn">
+    <a id="panelButton" href="https://panel.dxh.my.id" target="_blank" class="btn">
         Go to Panel
     </a>
 </div>
